--- a/index.html
+++ b/index.html
@@ -9,13 +9,51 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header class="logo-se">
+        <img class="logo" src="images/tgm_logo_tile-01.png">
+    </header>
+
+    <main>
 
 
-    <main></main>
+<section class="slide-se">
+ <div class="slide-button">
+            <button class="w3-button " onclick="plusDivs(-1)">&#10094;</button>
+            <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+        </div>    
+    <img class="mySlides" src="images/slide1.jpg">
 
 
-    
+</section>
+
+<section class="middle-section">
+
+    <div class="main-div">
+
+        <div class="left-div">
+
+          <div class="square"> <p class="tgm">  TGM EMORY POINT </p>
+          </div>
+        </div>
+        <div class="right-div">
+
+            <div class="square"> <p class="tgm">  TGM EMORY POINT </p>
+            </div>
+        </div>
+
+
+    </div>
+
+
+</section>
+
+
+
+
+    </main>
+
+
+
     <footer></footer>
 
 
