--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
         </div>    
     <img class="mySlides" src="images/slide1.jpg">
-
+    
 
 </section>
 
@@ -34,10 +34,28 @@
 
           <div class="square"> <p class="tgm">  TGM EMORY POINT </p>
           </div>
-        </div>
+          <div class="text"> <p class="line1">1540 AVENUE PLACE</p> 
+          <p class="line2">SUITE B-230 </p>  
+          <p class="line3">  ATLANTA, GA 30329 </p>
+          <p class="line4">   TEL: 678.927.9131 </p></div>
+        
+        <div class="bread-img"> <img class="bread" src="images/tgm-bread-green.png" alt="bread-image"></div>
+        <div class="text"> <p class="line1">1540 AVENUE PLACE</p> 
+            <p class="line2">SUITE B-210</p>  
+            <p class="line3">  ATLANTA, GA 30329 </p>
+            <p class="line4">  TEL: 404.941.9751 </p></div>
+    </div>
         <div class="right-div">
 
-            <div class="square"> <p class="tgm">  TGM EMORY POINT </p>
+            <div class="square"> <p class="tgm">  TGM CITY SPRING </p>
+            </div>
+            <div class="text"> <p class="line1">6405 BLUE STONE ROAD</p> 
+                <p class="line2">SUITE 240</p>  
+                <p class="line3 ADD"> SANDY SPRINGS, GA 30328 </p>
+                <p class="line4 ">  TEL: 404.255.3000 </p></div>
+
+            <div class="red-div"> <p class="t-mich">MICHELIN</p>
+
             </div>
         </div>
 
