--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -54,9 +57,10 @@
                 <p class="line3 ADD"> SANDY SPRINGS, GA 30328 </p>
                 <p class="line4 ">  TEL: 404.255.3000 </p></div>
 
-            <div class="red-div"> <p class="t-mich">MICHELIN</p>
+            <div class="red-div"><p class="t-mich"> MICHELIN </p>
 
             </div>
+            <div class="div-eat"> <h3 class="eat-text">“Eat Something!”</h3></div>
         </div>
 
 
@@ -64,9 +68,37 @@
 
 
 </section>
+<section>
+    <div class="ship-div">
+    <img class="ship-img" src="images/tgm_ship-01.png">
+</div>
+</section>
 
 
+<section>
 
+    <div class="story-div"><h1 class="story-title">Our Story</h1>
+    
+    
+    <p class="first line">The General Muir, established in January 2013 at Emory Point, is a modern American restaurant inspired by classic New York Jewish Deli, returning it to its hand-crafted roots. Traditional favorites are honored — pastrami is cured and smoked in house, bagels are hand rolled and kettle boiled — and joined by dishes going beyond tradition, focusing on fresh ingredients and simple preparations. A second location in Sandy Springs opened in 2021. 
+
+    </p>
+    <p class="second line">The restaurant is named for the refugee transport ship that brought co-owner Jennifer Johnson's mother and grandparents, Holocaust survivors, to New York in 1949.  Read more about the origin of our name and see the video by Atlanta Magazine below.</p>
+  <p class="third line">The General Muir serves breakfast, lunch, and weekend brunch at both locations, plus dinner at the Emory location, and offers an espresso bar serving locally-roasted Dancing Goats coffee as well as a full bar of wine, beer, spirits, and cocktails. Next door to the original Emory location, you’ll find TGM Bread and TGM Soup Co. pairing fresh baked breads and soups for a quick lunch, as well as loaves to take home. TGM Bread bakes all of the bread daily for both locations, the rest of the Rye Restaurants family, and many other restaurants around town.</p>
+
+
+</div>
+</section>
+<section>
+    <div class="story-div"> <h2 class="story-title">The Partners</h2>
+
+        <p class="line">The General Muir is owned by Jennifer and Ben Johnson, Shelley Sweet, and Chef Todd Ginsberg, who also partner on Fred's Meat & Bread and Yalla in Krog Street Market and Wood's Chapel BBQ in the historic Summerhill neighborhood of Atlanta — the Rye Restaurants family of restaurants. </p>
+        <p class="line">The Johnsons, husband and wife, opened West Egg on Atlanta’s Westside in 2004. Both Jennifer (our "office girl") and Ben (fondly referred to as "errand boy," although Renaissance man is more like it!) are former attorneys who practiced law in Atlanta for nearly 7 and 11 years, respectively, before embarking on a second career in hospitality. West Egg proudly celebrates its 20th anniversary in 2024.</p>
+        <p class="line">Shelley Sweet found her passion for the restaurant industry after graduating college and working in graphic design, beginning her restaurant career at West Egg when it opened in 2004. She joined the Concentrics Restaurant Group in 2006, serving as a manager at Two Urban Licks, Assistant General Manager at Murphy’s, and ultimately as General Manager of TAP from 2008 to 2010. She was the opening General Manager at Hugh Acheson’s Empire State South. Coming full circle, Shelley rejoined West Egg in 2011 as General Manager, becoming a partner in 2014. Shelley, Jennifer, and Ben continue to partner on West Egg, with Chef Andrew Smith. Shelley is a member of Les Dames d’Escoffier International, Atlanta Chapter, and recently served on the Georgia Restaurant Association Board of Directors</p>
+        <p class="line">Todd Ginsberg is a 2014 and 2015 James Beard Foundation Semifinalist for Best Chef, Southeast and a graduate of the Culinary Institute of America at Hyde Park, New York. He started his career at The Dining Room at The Ritz-Carlton in Atlanta under Joel Antunes and Bruno Menard, led the kitchens at Asher in Roswell, Georgia, and Madison's in Highlands, North Carolina, and spent time at Lucas Carton in Paris and at Alain Ducasse in New York. Upon his return to Atlanta, he worked for the Concentrics Restaurants group, serving as chef at both TAP and Trois. Todd was the chef at Bocado from its opening in 2009 until partnering with Shelley, Jennifer, and Ben to open The General Muir.</p>
+        <p class="line">In 2014 the Georgia Restaurant Association honored Jennifer, Ben, Shelley and Todd as Restaurateurs of the Year and, in 2018, StarChefs recognized them as Rising Star Restaurateurs.</p>
+    </div>
+</section>
 
     </main>
 
