--- a/index.html
+++ b/index.html
@@ -9,12 +9,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dosis:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <header class="logo-se">
+    <header >
+        <nav class="nav">
+        <div>
         <img class="logo" src="images/tgm_logo_tile-01.png">
+        </div>
+        <div class="lang-menu langs">
+            <div class="selected-language">ENGLISH
+
+            </div> 
+            <ul>
+                <li>
+                    <a href="#"  class="ge" language="Georgian">Georgia</a>
+                </li>
+                <li>
+                    <a href="#"  class="gr" language="Greek">Greek</a>
+                </li>
+                
+                <li>
+                    <a href="#"  class="fr" language="French">French</a>
+                </li>
+                <li>
+                    <a href="#" class="ae" language="Arabic" >Arabic</a>
+                </li>
+            </ul>         
+        </div>
+    </nav>
     </header>
+
 
     <main>
 
